--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,65 @@
+body {
+    background-color: #424769;
+    color: #ffffff;
+
+}
+
+h1 {
+    text-align: center;
+    color: #f9b17a;
+}
+
+#descricao {
+    background-color: #2d3250;
+    padding: 30px;
+    text-indent: 15px;
+    text-align: justify;
+    border: #f9b17a solid 2px;
+    border-radius: 15px;
+}
+
 #paises {
-    border: 1px solid red;
-    width: 65%;
+    border: 1px solid rgb(0, 0, 0);
+    width: 55%;
     height: 10%;
     margin: auto;
 }
 
 td {
-    border: 3px solid black;
+    border: 4px solid black;
 }
 
 
 img {
-    width: 250px
+    width: 250px;
+    height: 12rem;
+    display: flex;
+    justify-content: center;
+}
+
+a {
+    color: #ffffff;
+}
+
+a:hover {
+    color: #f9b17a;
+    font-size: 1.2em; 
+}
+
+button {
+    width: 30%;
+    background-color: #2d3250;
+    border: #f9b17a solid 2px;
+    border-radius: 20px;
+    padding: 0%;
+    color: #ffffff;
+    font-style: normal;
+    font-weight: bolder;
+}
+
+button:hover {
+    transform: scale(1.1);
+    background-color: #f9b17a;
+    transition-duration: 0.7s;
+
 }
