--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,13 @@ button:hover {
     transition-duration: 0.7s;
 
 }
+
+#content {
+    margin: auto;
+    width: 50%;
+    height: 10%;
+    background-color: #f9b17a;
+    color: #000000;
+    padding: 15px;
+    border-radius: 20px;
+}
