--- a/css/style.css
+++ b/css/style.css
@@ -70,16 +70,10 @@ button {
     height: 4em;
 }
 
-.content {
-    display: none;
-}
-
 #mensagem {
-    background-color: #2d3250;
-    border-radius: 20px;
-    border: #f9b17a solid 2px;
     width: 25%;
     text-align: center;
+    font-weight: bolder;
     margin: auto;
     padding: 15px;
     color: #ffffff;
