--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,9 @@ img {
 
 #hobbie {
     border-radius: 50%;
-    width: 25%;
-    min-height: 100px;
-    max-height: 350px;
+    max-width: 100%;
+    height: 250px;;
+    display: block;
 }
 
 a {
